--- a/note/package.json
+++ b/note/package.json
@@ -28,7 +28,6 @@
     "WebFramework"
   ],
   "devDependencies": {
-    "@ctmobile/react": "^1.0.1",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -36,11 +35,13 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.1.2",
+    "@ctmobile/react": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.3",
     "cross-env": "^5.2.0",
+    "css-loader": "^5.1.3",
     "csv-loader": "^3.0.2",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.8.0",
@@ -60,6 +61,7 @@
     "normalize.less": "^1.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "uuid": "^3.3.2",
     "webpack": "^4.20.2",
