chore:package.json中加入files字段

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc src README.md -d doc -u doc/tutorials"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/playerljc/CTMobile-React.git"
