--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "url": "https://github.com/playerljc/CTMobile-React/issues"
   },
   "homepage": "https://github.com/playerljc/CTMobile-React#readme",
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
@@ -59,8 +63,8 @@
     "less-plugin-autoprefix": "^1.5.1",
     "postcss-for": "^2.1.1",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^2.6.2",
     "prettier": "^2.5.1",
     "eslint": "^8.5.0",
