--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
+  "dependencies": {
+    "jquery": "^2.2.4"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
@@ -57,7 +60,6 @@
     "gulp-postcss": "^7.0.1",
     "gulp-replace": "^0.6.1",
     "gulp-uglify": "^3.0.1",
-    "jquery": "^3.3.1",
     "jsdoc": "^3.5.5",
     "less": "^2.7.1",
     "less-plugin-autoprefix": "^1.5.1",
