chore: package.json中files字段加入README_zh-CN.md

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "doc": "jsdoc src README.md -d doc -u doc/tutorials"
   },
   "files": [
-    "lib"
+    "lib",
+    "README_zh-CN.md"
   ],
   "repository": {
     "type": "git",
